hphp/hack/test/sound_dynamic/typing/pessimise_builtins/dict.bad.php
<?hh

class C {}

function test_dict() : dict<int,C> {
  return dict<int,dynamic>[];
}
